--- a/Docker/tensorflow/1.4.1/centos6/py36/gpu/Dockerfile
+++ b/Docker/tensorflow/1.4.1/centos6/py36/gpu/Dockerfile
@@ -2,7 +2,7 @@
 # tag name: leelabcnbc/tensorflow:1.4.1-centos6-py36-gpu
 
 # pull base image
-FROM leelabcnbc/bazel:0.9.0-cuda8.0-cudnn6-centos6
+FROM leelabcnbc/bazel:0.8.1-cuda8.0-cudnn6-centos6
 MAINTAINER Yimeng Zhang <zym1010@gmail.com>
 COPY CROSSTOOL_nvcc.tpl /tmp/
 
@@ -27,7 +27,7 @@ RUN echo "===> install everything"  && \
     curl -k -L -O https://github.com/tensorflow/tensorflow/archive/v1.4.1.tar.gz && \
     tar -zxf v1.4.1.tar.gz && rm -rf v1.4.1.tar.gz && cd tensorflow-1.4.1 && \
     cp /tmp/CROSSTOOL_nvcc.tpl third_party/gpus/crosstool/CROSSTOOL_nvcc.tpl && ls -la third_party/gpus/crosstool && \
-    scl enable devtoolset-3 'export PYTHON_BIN_PATH=~/conda/envs/tf/bin/python PATH=~/conda/envs/tf/bin:~/bin:$PATH LD_LIBRARY_PATH=/usr/local/cuda/lib64 TF_NEED_CUDA=1 TF_CUDA_COMPUTE_CAPABILITIES="5.2,6.1" TF_NEED_JEMALLOC=0 TF_NEED_GCP=0 TF_NEED_HDFS=0 TF_NEED_S3=0 && yes "" | ./configure && ~/bin/bazel build -c opt --config=cuda --incompatible_load_argument_is_label=false --spawn_strategy=standalone --genrule_strategy=standalone --verbose_failures //tensorflow/tools/pip_package:build_pip_package' && \
+    scl enable devtoolset-3 'export PYTHON_BIN_PATH=~/conda/envs/tf/bin/python PATH=~/conda/envs/tf/bin:~/bin:$PATH TF_NEED_CUDA=1 TF_CUDA_COMPUTE_CAPABILITIES="5.2,6.1" TF_NEED_JEMALLOC=0 TF_NEED_GCP=0 TF_NEED_HDFS=0 TF_NEED_S3=0 && yes "" | ./configure && ~/bin/bazel build -c opt --config=cuda --spawn_strategy=standalone --genrule_strategy=standalone --verbose_failures //tensorflow/tools/pip_package:build_pip_package' && \
     scl enable devtoolset-3 'PATH=~/conda/envs/tf/bin:$PATH bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg' && \
     cd .. && rm -rf tensorflow-1.4.1 && ~/conda/bin/conda clean --yes --all && rm -rf ~/conda && rm -rf .cache
 
