update gcc7 version py3 env

--- a/Docker/leelab-py3/Dockerfile
+++ b/Docker/leelab-py3/Dockerfile
@@ -4,11 +4,20 @@
 FROM continuumio/miniconda3:4.5.12
 
 # python 3.6.7 is the latest 3.6.x maintained by conda-forge
-RUN conda create -n leelab -c conda-forge -y python=3.6.7 \
-    # four big ones. `blas=*=openblas` from <https://conda-forge.org/docs/blas.html#openblas-mkl-dance>
-    numpy=1.15.4 scipy=1.2.0 matplotlib=3.0.2 pandas=0.23.4 blas=*=openblas \
+RUN conda create -n leelab -c conda-forge -y python==3.6.7 \
+    # four big ones.
+    # check <https://conda-forge.org/docs/blas.html#openblas-mkl-dance> if you run into blas issues.
+    # the `py36_blas_openblash1522bff_1000` part is to make sure everything is built with gcc7.
+    # otherwise, later on rpy2 will upgrade libgcc-ng by force, somehow even if
+    # I specify --no-update-dependencies
+
+    # MAYBE bug: when I only specify numpy with that long build string,
+    # and using `=` not `==`, `conda install` breaks.
+    # if everything is `==`, then it works.
+
+    numpy==1.15.4=py36_blas_openblash1522bff_1000 scipy==1.2.0 matplotlib==3.0.2 pandas==0.23.4 \
     # other ones in my "default" scripts
-    notebook=5.7.4 h5py=2.9.0  git=2.20.1 \
+    notebook==5.7.4 h5py==2.9.0 git==2.20.1 \
     && conda clean --all
 
 # set shell stuff
